apps/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      # init container which creates directories for subpaths
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:2.3.0.5236-ls133
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /config
              subPath: prowlarr/config
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: you-are-a-pirate-pvc
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
