apps/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: jellyfin
  annotations:
    metallb.io/loadBalancerIPs: 192.168.176.223
spec:
  type: LoadBalancer
  selector:
    app: prowlarr
  ports:
    - name: http
      protocol: TCP
      port: 9696
      targetPort: 9696
