apps/prowlarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr-http
  namespace: jellyfin
spec:
  parentRefs:
    - name: traefik
      namespace: traefik
      sectionName: web
      kind: Gateway

  hostnames:
    - prowlarr.homelab

  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /

      backendRefs:
        - name: prowlarr
          namespace: jellyfin
          port: 9696
