apps/prowlarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-ingressroute
  namespace: jellyfin
spec:
  entryPoints:
    - web
  routes:
    - match: Host("prowlarr.homelab")
      kind: Rule
      services:
        - name: prowlarr
          port: 8989
